--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Conversor de Pesos Ar/Usd</h1>
-    <script src="./conversor.js"></script>
+    <script src="./js/conversor.js"></script>
     
 </body>
 </html>
