Modifique la 3era. Preentrega

--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
             <article class="centrar4">
                 <h2>Contacto</h2>
                 <form id="formularioDeContacto">
-                <label for="nombre">Nombre</label>
-                <input type="text" id="nombre">
-                <label for="email">E-Mail</label>
-                <input type="email" id="email">
-                <label for="telefono">Telefono</label>
-                <input type="tel" id="telefono">
-                <label for="mensaje">Deje su mensaje</label>
-                <textarea name="" id="mensaje" cols="25" rows="10"></textarea>
+                  <label for="nombre">Nombre</label>
+                  <input name="nombre" type="text" id="nombre">
+                  <label for="email">E-Mail</label>
+                  <input name="email" type="email" id="email">
+                  <label for="telefono">Telefono</label>
+                  <input name="telefono" type="tel" id="telefono">
+                  <label for="mensaje">Deje su mensaje</label>
+                  <textarea name="mensaje" id="mensaje" cols="25" rows="10"></textarea>
                   <div class="boton">
                       <input type="reset" value="Cancelar">
                       <input class="enviar" type="submit" value="Enviar">
                   </div>
                 </form>
             </article>
-            <article>
+            <article class="formulario5">
               <h2>Formularios</h2>
               <div id="listaDeFormularios"></div>
             </article>
